Changes related to review comments

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header
     z-index: 1;
     height:40px;
     width: 98%;
-    background-color: #668284;
+    background-color: red;
     margin-bottom: 10px;
 }
 
@@ -105,4 +105,9 @@ td
 #heading
 {
     font-weight:bold;
+}
+
+#testP
+{
+    color: green;
 }
